[package]
name = "json-matcher"
version = "0.1.0"
edition = "2021"
description = "Utility library for declaratively matching JSON values"
license = "MIT"   # SPDX ID(s)
repository = "https://github.com/samgqroberts/json-matcher"
homepage = "https://github.com/samgqroberts/json-matcher"
documentation = "https://docs.rs/json-matcher"
keywords = ["serde", "json", "matcher", "testing"]
categories = ["development-tools", "development-tools::testing"]
authors = ["Sam Roberts <samgqroberts@gmail.com>"]
include = ["/src", "LICENSE"]

[dependencies]
serde_json = { version = "1.0.145", features = ["preserve_order"] }
chrono = { version = "0.4.42", optional = true }
chrono-tz = { version = "0.10.4", optional = true }

[features]
default = ["datetime"]
datetime = ["dep:chrono", "dep:chrono-tz"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
